[project]
name = "eink-net"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "alex", email = "alex@pdp7.net" }
]
dependencies = [
    "pillow>=10.4.0",
    "numpy>=2.1.0",
    "rpi-gpio>=0.7.1",
    "spidev>=3.6",
    "gpiozero>=2.0.1",
    "lgpio>=0.2.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/eink_net"]
